# octotracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  OPTIMIZATIONS.md  PERFORMANCE_IMPROVEMENTS.md  README.md  RENDER_FULL.md  arera_data_reader.py  backfill_rate_history.py  bot.py  broadcast.py  build.sh  checker.py  constants.py  data_reader.py  database.py  docker-compose.yml  feedback.py  formatters.py  git_sync.py  health_handler.py  message.txt  push_changes.sh  pyproject.toml  render.yaml  requirements.txt  run_checker.sh  run_scraper.sh  scraper.py  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: check-daily.yml  docker.yml  lint.yml  release-docker.yml  scrape-daily.yml  scrape-weekly.yml  test.yml  unit-test.yml
api/: __init__.py  auth.py  handlers.py
data/: arera_cache_metadata.json  arera_offerte_elettriche.xml  arera_offerte_gas.xml  current_rates.json  current_rates.json.example  users.db  users.json.example
handlers/: __init__.py  commands.py  feedback.py  rate_update.py  registration.py
static/: index.html  site.webmanifest  styles.css
test_data/: sample_arera.xml
tests/: README.md  conftest.py  test_api_auth.py  test_api_database.py  test_api_handlers.py  test_backfill.py  test_bot.py  test_bot_health_server.py  test_broadcast.py  test_checker.py  test_data_reader.py  test_database_rate_history.py  test_feedback.py  test_handlers_init.py  test_health.py  test_integration.py  test_performance.py  test_rate_update.py  test_registration.py  test_scraper.py
webapp/: index.html
webapp/css/: style.css
webapp/js/: app.js
