[project]
name = "octotracker"
version = "1.0.0"
description = "Bot Telegram per monitoraggio tariffe Octopus Energy"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "dstmrk"}
]

dependencies = [
    "python-telegram-bot[webhooks]>=20.7",
    "playwright>=1.48.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module level import not at top of file (needed for load_dotenv and filterwarnings)
    "E731",  # do not assign a lambda expression, use a def (intentional for dynamic behavior)
]

[tool.ruff.lint.isort]
known-first-party = ["octotracker"]
